--- a/src/styles/contacts.css
+++ b/src/styles/contacts.css
@@ -9,18 +9,17 @@
     height: 100vh;
 }
 
-.card {
-    /* transition: transform 0.2s ease-in-out; */
+/* .card {
     transition: transform 0.2s ease-in-out, max-height 0.2s ease-in-out;
      width: 18rem;
-     max-height: 170px; /* Зафиксированная максимальная высота */
-     /* overflow: hidden; */
+     max-height: 170px;
+     overflow: hidden;
   }
   
   .card:hover {
     transform: scale(1.05);
-  }
-  
+  } */
+/*   
   .card-wrapper {
     display: flex;
     flex-wrap: wrap;
@@ -28,11 +27,11 @@
     justify-content: center;
   }
 
-  .card.expanded {
-    max-height: 500px; /* Максимальная высота для отображения дополнительной информации */
-  }
-
+  /* .card.expanded {
+    max-height: 500px;
+  } */
+/* 
   .overflow-y-scroll { max-height: 100px; overflow-y: auto; }
 
-  .badge { margin-right: 0.5rem; }
+  .badge { margin-right: 0.5rem; } */
   
